// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/datasource/DatasourceComponent datasource with expression arguments 1`] = `
<div
  className="canvasDataSource__section"
>
  <button
    className="euiButtonEmpty euiButtonEmpty--small euiButtonEmpty--flushLeft canvasDataSource__triggerButton css-9t7nyf-empty-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        className="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
        size="m"
      >
        
      </span>
      <span
        className="euiButtonEmpty__text"
      >
        <span
          className="canvasDataSource__triggerButtonIcon"
          data-euiicon-type="training"
        >
          
        </span>
        Test Datasource
      </span>
    </span>
  </button>
  <div
    className="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <div
    className="euiPanel euiPanel--warning euiPanel--paddingMedium euiCallOut euiCallOut--warning emotion-euiPanel-none-m-warning-euiCallOut"
  >
    <div
      className="euiText emotion-euiText-s-euiTextColor-default-euiCallOut__description"
      style={Object {}}
    >
      <p>
        The datasource has an argument controlled by an expression. Use the expression editor to modify the datasource.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/datasource/DatasourceComponent simple datasource 1`] = `
<div
  className="canvasDataSource__section"
>
  <button
    className="euiButtonEmpty euiButtonEmpty--small euiButtonEmpty--flushLeft canvasDataSource__triggerButton css-9t7nyf-empty-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        className="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
        size="m"
      >
        
      </span>
      <span
        className="euiButtonEmpty__text"
      >
        <span
          className="canvasDataSource__triggerButtonIcon"
          data-euiicon-type="training"
        >
          
        </span>
        Test Datasource
      </span>
    </span>
  </button>
  <div
    className="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <div
    className="render_to_dom"
  />
  <hr
    className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginMedium emotion-euiHorizontalRule-full-m"
  />
  <div
    className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        className="euiButtonEmpty euiButtonEmpty--small css-9t7nyf-empty-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="euiButtonContent euiButtonEmpty__content"
        >
          <span
            className="euiButtonEmpty__text"
          >
            Preview data
          </span>
        </span>
      </button>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        className="euiButton emotion-euiButtonDisplay-s-s-fill-success"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="emotion-euiButtonDisplayContent"
        >
          <span
            className="eui-textTruncate"
          >
            Save
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
